src/App.css
.weather-app-grid {
  background-image: linear-gradient(-150deg, #ece6e6 0, #83ccee 45%);
}

.search-icon {
    padding: 7.5px 7.5px 7.5px 35px;
    background: url("/icons8-search-location-48.png") no-repeat 12px center;
    background-size: 1.2em; /* Adjust icon size */
    background-color: #e5e5e5;
}

.main-temp {
  background: -webkit-linear-gradient(#5fcac3, #0b4f4a);
  background: linear-gradient(#5fcac3, #0b4f4a);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.aiHeader {
  background: -webkit-linear-gradient(#5fcac3, #0b4f4a);
  background: linear-gradient(#4338ca, #a21caf);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.aiBar {
  transition: height 0.3s ease-in-out;
  overflow: hidden;
  height: 25%;
}

@keyframes glow {
  0% {
    background-position: 0% 0;
    width: 70%;
  }
  50% {
    background-position: 200% 0;
    width: 80%;
  }
  100% {
    background-position: 0% 0;
    width: 70%;
  }
}

.animate-bar1 {
  display: inline-block;
  position: relative;
  width: 70%;
  background: #EEAECA; background: linear-gradient(to right, #eeaecab3 0%, #94bbe9b3 40%, #eeaecab3 100%);
  background-size: 200% auto;
  transition: all 0.5s ease-in-out;
  animation: glow 1s 0.5s linear forwards infinite;
}

.animate-bar2 {
  display: inline-block;
  position: relative;
  top: -15%;
  padding: 0;
  left: 12.5%;
  width: 75%;
  background: linear-gradient(to right, #94bbe9b3 0%, #eeaecab3 40%, #94bbe9b3 100%);
  background-size: 200% auto;
  transition: all 0.5s ease-in-out;
  animation: glow 1s 1s linear forwards infinite;
}

.hide-card {
  display: none;
}
.show-card {
  display: block;
}

@media (min-width: 768px)  {
   /* portrait tablets,*/
.weather-app-grid {
  display: grid;
  grid-template-columns: .6fr 1fr;
  grid-template-rows: 48px 1fr auto auto auto;
  
  grid-template-areas:
    " search overview "
    " daily overview "
    " daily aisection "
    " daily aisection "
    " daily hourly "
    " daily current "
    " recents current "
    ;
}

.search { grid-area: search; background-color: rgba(229,229,229,.5); }
.overview { grid-area: overview; }
.aiOverview {grid-area: aisection}
.daily { grid-area: daily; }
.hourly { grid-area: hourly; }
.current { grid-area: current; }
.recents { grid-area: recents; }
}

